--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -20,5 +20,8 @@ endif()
 #
 # add the executables
 #
+find_package(BISON)
+BISON_TARGET(parser as.y ${CMAKE_CURRENT_BINARY_DIR}/y.tab.c DEFINES_FILE ${CMAKE_CURRENT_BINARY_DIR}/y.tab.h)
+
 add_executable(as16 y.tab.c)
 add_executable(dasm16 disasm.c)
